# cvxpy-translation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff_defaults.toml
.github/: renovate.json
.github/workflows/: cd.yml  ci.yaml  ci.yml  test.yml
src/cvxpy_gurobi/: __init__.py  interface.py  translation.py
src/cvxpy_translation/: __init__.py  exceptions.py  interface.py  utils.py
src/cvxpy_translation/gurobi/: interface.py  translation.py
src/cvxpy_translation/scip/: __init__.py  interface.py  translation.py
tests/: test_all.py  test_api.py  test_atoms.py  test_backfill.py  test_interface.py  test_non_optimal.py  test_problems.py
tests/snapshots/: all__lp_attributes2__0.txt  all__lp_attributes4__0.txt  all__lp_genexpr_matrix10__0.txt  all__lp_genexpr_matrix11__0.txt  all__lp_genexpr_matrix12__0.txt  all__lp_genexpr_matrix13__0.txt  all__lp_genexpr_matrix14__0.txt  all__lp_genexpr_matrix3__0.txt  all__lp_genexpr_matrix4__0.txt  all__lp_genexpr_matrix5__0.txt  all__lp_genexpr_matrix6__0.txt  all__lp_genexpr_matrix7__0.txt  all__lp_genexpr_matrix8__0.txt  all__lp_genexpr_matrix9__0.txt  all__lp_genexpr_min_max10__0.txt  all__lp_genexpr_min_max11__0.txt  all__lp_genexpr_min_max12__0.txt  all__lp_genexpr_min_max13__0.txt  all__lp_genexpr_min_max14__0.txt  all__lp_genexpr_min_max15__0.txt  all__lp_genexpr_min_max16__0.txt  all__lp_genexpr_min_max17__0.txt  all__lp_genexpr_min_max18__0.txt  all__lp_genexpr_min_max19__0.txt  all__lp_genexpr_min_max20__0.txt  all__lp_genexpr_min_max21__0.txt  all__lp_genexpr_min_max22__0.txt  all__lp_genexpr_min_max23__0.txt  all__lp_genexpr_min_max24__0.txt  all__lp_genexpr_min_max25__0.txt  all__lp_genexpr_min_max26__0.txt  all__lp_genexpr_min_max27__0.txt  all__lp_genexpr_min_max28__0.txt  all__lp_genexpr_min_max29__0.txt  all__lp_genexpr_min_max30__0.txt  all__lp_genexpr_min_max31__0.txt  all__lp_genexpr_min_max32__0.txt  all__lp_genexpr_min_max33__0.txt  all__lp_genexpr_min_max34__0.txt  all__lp_genexpr_min_max35__0.txt  (+234 more)
tests/snapshots/gurobi/: all__lp_quad_form_psd__0.txt  all__lp_simple10__0.txt  all__lp_simple9__0.txt  all__lp_sum_axis0__0.txt  genexpr_norm1_11.txt  genexpr_norm1_15.txt  genexpr_norm2_00.txt  genexpr_norm2_01.txt  genexpr_norm2_02.txt  genexpr_norm2_03.txt  genexpr_norm2_04.txt  genexpr_norm2_05.txt  genexpr_norm2_06.txt  genexpr_norm2_07.txt  genexpr_norm2_08.txt  genexpr_norm2_09.txt  genexpr_norm2_10.txt  genexpr_norm2_11.txt  genexpr_norm2_12.txt  genexpr_norm2_13.txt  genexpr_norm2_14.txt  genexpr_norm2_15.txt  genexpr_norminf_11.txt  genexpr_norminf_15.txt  hstack_02.txt  hstack_03.txt  hstack_06.txt  hstack_07.txt  hstack_09.txt  hstack_11.txt  hstack_14.txt  hstack_15.txt  lp__bounds_00.txt  lp__bounds_01.txt  lp__bounds_02.txt  lp__bounds_03.txt  lp__bounds_04.txt  lp__bounds_05.txt  lp__bounds_06.txt  lp__bounds_07.txt  (+48 more)
tests/snapshots/scip/: all__lp_quad_form5__0.txt  all__lp_reshape31__0.txt  all__lp_reshape35__0.txt  attributes_01.txt  attributes_02.txt  attributes_03.txt  attributes_04.txt  bounds_00.txt  bounds_01.txt  bounds_02.txt  bounds_03.txt  constant_objective_00.txt  constant_objective_01.txt  constant_objective_02.txt  constant_objective_03.txt  constant_objective_04.txt  constant_objective_05.txt  genexpr_abs_00.txt  genexpr_abs_01.txt  genexpr_abs_02.txt  genexpr_abs_03.txt  genexpr_abs_04.txt  genexpr_abs_05.txt  genexpr_abs_06.txt  genexpr_abs_07.txt  genexpr_abs_08.txt  genexpr_abs_09.txt  genexpr_abs_10.txt  genexpr_abs_11.txt  genexpr_abs_12.txt  genexpr_abs_13.txt  genexpr_abs_14.txt  genexpr_abs_15.txt  genexpr_abs_16.txt  genexpr_abs_17.txt  genexpr_abs_18.txt  genexpr_abs_19.txt  genexpr_min_max_00.txt  genexpr_min_max_01.txt  genexpr_min_max_02.txt  (+324 more)
