[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "cvxpy-translation"
dynamic = ["version"]
description = "Translate CVXPY problems into solvers' native models"
readme = "README.md"
keywords = [
  "cvxpy",
  "gurobi",
  "gurobipy",
  "optimization",
]
license = "Apache-2.0"
authors = [
  { name = "Jonathan Berthias", email = "jvberthias@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Mathematics",
]
urls.Documentation = "https://github.com/jonathanberthias/cvxpy-translation#readme"
urls.Issues = "https://github.com/jonathanberthias/cvxpy-translation/issues"
urls.Source = "https://github.com/jonathanberthias/cvxpy-translation"
dependencies = [
  # "cvxpy" must be available but we don't list it
  # as a dependency because cvxpy-base is sufficient
  "numpy>=1.23.0",
  "scipy>=1.5.4",
]

[project.optional-dependencies]
cvxpy = ["cvxpy>=1.1.16"]
cvxpy-base = ["cvxpy-base>=1.1.16"]
gurobi = ["gurobipy>=9"]
scip = ["pyscipopt>=5.4.1"]

[dependency-groups]
test = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "pytest-snapshot==0.9.0",
  "pytest-xdist==3.8.0",
]
latest = [
  { "include-group" = "test" },
  "cvxpy-base==1.7.5",
  "gurobipy==13.0.0",
  "pyscipopt==5.7.1",
  "numpy==2.3.5",
  "scipy==1.16.3",
]
oldest = [
  { "include-group" = "test" },
  "cvxpy-base>=1.1.24",
  "gurobipy>=12.0.0",
  "pyscipopt>=5.4.1",
  "numpy>=1.23.0",
  "scipy>=1.5.4",
  "cvxpy-translation[cvxpy-base]",
  "cvxpy-translation[gurobi]",
  "cvxpy-translation[scip]",
]
types = ["mypy==1.19.1", "pyright==1.1.407"]
dev = [{ "include-group" = "latest" }, { "include-group" = "types" }]

[tool.uv]
conflicts = [[{ group = "latest" }, { group = "oldest" }]]
[tool.uv.dependency-groups]
latest = { requires-python = "~=3.13.0" }
oldest = { requires-python = "~=3.9.0" }

[tool.hatch]
version.source = "vcs"
version.raw-options = { local_scheme = "no-local-version" }
build.hooks.vcs.version-file = "src/cvxpy_translation/_version.py"

[tool.hatch.envs.default]
description = "Base environment for other envs to inherit from"
dependency-groups = ["test"]
installer = "uv"
[tool.hatch.envs.default.scripts]
tests = [
  "versions",
  "pytest {args:tests}",
]
versions = [
  "python --version",
  "{env:HATCH_UV} pip freeze",
]
update-snapshots = "hatch run latest:update-snapshots -n 4 {args}"
all-tests = [
  "hatch run latest:tests -n 4 {args}",
  "hatch run oldest:tests -n 4 {args}",
]

[tool.hatch.envs.latest]
description = "Dependencies at their most up-to-date versions, equivalent to `uv sync`"
python = "3.13"
dependency-groups = ["latest"]
scripts = { update-snapshots = "hatch run latest:tests --snapshot-update {args} tests/test_all.py::test_lp" }

[tool.hatch.envs.oldest]
description = "The oldest supported set of dependencies, for testing purposes, equivalent to `uv sync --group oldest --no-dev --resolution=lowest-direct`"
env-vars = { UV_RESOLUTION = "lowest-direct" }
python = "3.9"
dependency-groups = ["oldest"]

[tool.hatch.envs.types]
description = "Type checking environment"
template = "latest"
dependency-groups = ["types"]
[tool.hatch.envs.types.scripts]
check = ["versions", "- my-py", "py-right"]
my-py = "mypy {args:src tests}"
py-right = "pyright {args:src tests}"

[tool.mypy]
strict = false
# untyped_calls_exclude = ["cvxpy"]  # enable once Mypy 1.6 or later is used
[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "cvxpy.*"
implicit_reexport = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.9"

[tool.hatch.envs.hatch-static-analysis]
# https://hatch.pypa.io/latest/config/static-analysis/
config-path = "none"  # don't rely on default hatch config

[tool.ruff]
preview = true
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "ANN401",  # Any must be used due to poorly typed libraries and very dynamic return types
  "COM812",  # conflicts with formatter
  "CPY",     # no copyright on each file
  "D10",     # let's decide when documentation is needed
  "D203",    # blank-line-before-class
  "D213",    # multi-line-summary-second-line
  "DOC201",  # return is not documented in docstring
  "E501",    # comments may exceed line length
  "FIX",     # TODOs are fine
  "TD",      # TODOs are fine
  "PLC0415", # `import` not at top of file is on purpose
  "PLR2004", # 'magic' constants are not that annoying
  "RUF067",  # try-except in __init__.py file
  "S101",    # asserts used for type narrowing
]
exclude = [
  "src/cvxpy_translation/_version.py", # autogenerated by hatch-vcs
]
[tool.ruff.lint.extend-per-file-ignores]
"src/cvxpy_translation/*/translation.py" = [
  "N802",    # visitor uses uppercase letters in method names
  "PLR6301", # method could be a function or staticmethod
  "PLR0904", # too many public methods in class
]
"tests/*" = [
  "ANN201",  # missing return type annotations are common in tests
  "FBT001",  # bool positional arguments are necessary with parametrized tests
  "INP001",  # no __init__.py in tests
  "N806",    # uppercase letters for matrices
  "PLR0915", # test functions can be long
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["cvxpy_translation", "test_problems"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
minversion = "7"
pythonpath = "tests"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
source_pkgs = ["cvxpy_translation"]
branch = true
dynamic_context = "test_function"
omit = [
  "*/_version.py", # autogenerated by hatch-vcs
]
[tool.coverage.report]
exclude_also = [
  "@overload",
]
show_missing = true
[tool.coverage.html]
show_contexts = true
